gengo/tests/snapshots/gengo_test__git_javascript.snap
---
source: gengo/tests/gengo_test.rs
expression: results
---
[
    (
        "bin.js",
        Entry {
            language: Javascript,
            size: 28,
            detectable: true,
            generated: false,
            documentation: false,
            vendored: false,
        },
    ),
    (
        "dist/bin.js",
        Entry {
            language: PlainText,
            size: 62,
            detectable: true,
            generated: true,
            documentation: false,
            vendored: false,
        },
    ),
    (
        "docs/index.html",
        Entry {
            language: Html,
            size: 26,
            detectable: false,
            generated: false,
            documentation: true,
            vendored: false,
        },
    ),
    (
        "node_modules/my-dependency/index.js",
        Entry {
            language: Javascript,
            size: 29,
            detectable: false,
            generated: false,
            documentation: false,
            vendored: true,
        },
    ),
    (
        "src/bin.ts",
        Entry {
            language: Typescript,
            size: 62,
            detectable: true,
            generated: false,
            documentation: false,
            vendored: false,
        },
    ),
]
